fix row overflow, add img static home

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import "./branding.scss";
 @import "~bootstrap/scss/bootstrap";
+
+.row {
+  --bs-gutter-x: unset !important;
+  --bs-gutter-y: unset !important;
+}
