--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,23 +1,22 @@
 .homePageRow {
 }
 .leftColumn {
-  height: 100vh;
+  height: 100dvh;
   @media screen and (max-width: 990px) {
-    height: 75vh;
+    height: 75dvh;
   }
   display: flex;
   flex-direction: column;
   justify-content: center;
   > div {
     display: flex;
-    padding: 0 9rem;
+    /*padding: 0 9rem;*/
     justify-content: center;
     flex-direction: column;
     align-items: center;
     img {
-      aspect-ratio: 1/1;
       width: 100%;
-      height: auto;
+      object-fit: cover;
     }
   }
   h6 {
@@ -26,8 +25,8 @@
 }
 
 .rightColumn {
-  height: 100vh;
+  height: 100dvh;
   @media screen and (max-width: 990px) {
-    height: 25vh;
+    height: 25dvh;
   }
 }
